src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_rename_mode_narrow_terminal.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Rename Snippet ──────────────────────┐"
"│My Snippet                            │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"┌──────────────────────────────────────┐"
"│ [Enter] Save  [Esc] Cancel           │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
