src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_scrollbar_at_bottom.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (30) ───────────────────────────────────────────────────────────────┐"
"│   Snippet 20                                                                 ║"
"│   Snippet 21                                                                 ║"
"│   Snippet 22                                                                 ║"
"│   Snippet 23                                                                 ║"
"│   Snippet 24                                                                 ║"
"│   Snippet 25                                                                 █"
"│   Snippet 26                                                                 █"
"│   Snippet 27                                                                 █"
"│   Snippet 28                                                                 █"
"│ ► Snippet 29                                                                 ║"
"│                                                                              ║"
"│                                                                              ║"
"└[Enter] Apply | [Ctrl+N] New | [Ctrl+E] Edit | [Ctrl+R] Replace | [Ctrl+D] Del┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ .query29                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
