src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_scrollbar_at_middle.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (30) ───────────────────────────────────────────────────────────────┐"
"│   Snippet 06                                                                 ║"
"│   Snippet 07                                                                 ║"
"│   Snippet 08                                                                 █"
"│   Snippet 09                                                                 █"
"│   Snippet 10                                                                 █"
"│   Snippet 11                                                                 ║"
"│   Snippet 12                                                                 ║"
"│   Snippet 13                                                                 ║"
"│   Snippet 14                                                                 ║"
"│ ► Snippet 15                                                                 ║"
"│   Snippet 16                                                                 ║"
"│   Snippet 17                                                                 ║"
"└[Enter] Apply | [Ctrl+N] New | [Ctrl+E] Edit | [Ctrl+R] Replace | [Ctrl+D] Del┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ .query15                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
