src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_scrollbar_at_top.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (30) ───────────────────────────────────────────────────────────────┐"
"│ ► Snippet 00                                                                 █"
"│   Snippet 01                                                                 █"
"│   Snippet 02                                                                 █"
"│   Snippet 03                                                                 █"
"│   Snippet 04                                                                 ║"
"│   Snippet 05                                                                 ║"
"│   Snippet 06                                                                 ║"
"│   Snippet 07                                                                 ║"
"│   Snippet 08                                                                 ║"
"│   Snippet 09                                                                 ║"
"│   Snippet 10                                                                 ║"
"│   Snippet 11                                                                 ║"
"└[Enter] Apply | [Ctrl+N] New | [Ctrl+E] Edit | [Ctrl+R] Replace | [Ctrl+D] Del┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ .query00                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
