src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_snippet_popup_narrow_terminal.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────┐"
"│                                      │"
"└──────────────────────────────────────┘"
"┌ Snippets ────────────────────────────┐"
"│   No snippets yet. Press Ctrl+N to cr│"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└trl+N New | Ctrl+E Edit | Ctrl+R Repla┘"
"┌ Snippet Preview ─────────────────────┐"
"│ No snippet selected                  │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
