src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_snippet_popup_small_height.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets ────────────────────────────────────────────────────────────────────┐"
"│   No snippets yet. Press Ctrl+N to create one.                               │"
"└[Enter] Apply | [Ctrl+N] New | [Ctrl+E] Edit | [Ctrl+R] Replace | [Ctrl+D] Del┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
