src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_snippet_popup_with_last_item_selected.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (3) ────────────────────────────────────────────────────────────────┐"
"│   Select all keys                                                            │"
"│   Flatten arrays                                                             │"
"│ ► Filter by type                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└te | Enter Apply | Ctrl+N New | Ctrl+E Edit | Ctrl+R Replace | Ctrl+D Delete |┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ .[] | select(.type == "error")                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
