src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_snippet_popup_with_second_item_selected.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Snippets (3) ────────────────────────────────────────────────────────────────┐"
"│   Select all keys - Returns array of all keys                                │"
"│ ► Flatten arrays                                                             │"
"│   Filter by type - Filter items by type                                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query Preview ───────────────────────────────────────────────────────────────┐"
"│ flatten                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
