src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_snippet_popup_with_single_snippet.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Snippets (1) ────────────────────────────────────────────────────────────────┐"
"│   Identity                                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
